Home and services

--- a/Multimedia-Practica3/scss/_bradcam.scss
+++ b/Multimedia-Practica3/scss/_bradcam.scss
@@ -1,5 +1,5 @@
 .bradcam_bg{
-    background-image: url(../img/banner/breadcam_bg.png);
+    background-image: url(../img/banner/breadcam_bg.jpg);
 }
 .breadcam_area{
     padding: 170px 0;
