--- a/Multimedia-Practica3/css/style.css
+++ b/Multimedia-Practica3/css/style.css
@@ -745,7 +745,7 @@ h3 {
 }
 
 .slider_bg_1 {
-    background-image: url(../img/gotham-city.jpg)
+    background-image: url(../img/banner/gotham-city.jpg)
 }
 
 .slider_area .single_slider {
@@ -774,7 +774,8 @@ h3 {
 }
 
 .slider_area .single_slider .slider_text h3 {
-    color: #ffffff;
+    color: white;
+    /*background-color: black;*/
     font-weight: 700;
     font-family: "Roboto", sans-serif;
     font-size: 60px;
@@ -806,7 +807,8 @@ h3 {
 .slider_area .single_slider .slider_text p {
     font-size: 20px;
     font-weight: 400;
-    color: #ffffff;
+    color: white;
+    /*background-color: black;*/
     margin-bottom: 55px;
     margin-top: 15px
 }
@@ -1456,7 +1458,7 @@ h3 {
 }
 
 .bradcam_bg {
-    background-image: url(../img/banner/breadcam_bg.png)
+    background-image: url(../img/banner/breadcam_bg.jpg)
 }
 
 .breadcam_area {
