--- a/Multimedia-Practica3/scss/_slick-nav.scss
+++ b/Multimedia-Practica3/scss/_slick-nav.scss
@@ -29,6 +29,10 @@
                 background: transparent;
                 color: #ff5e13;
             }
+            &:focus{
+              background: transparent;
+              color: #ff5e13;
+            }
             &.active{
                 color:#ff5e13;
             }
