--- a/Multimedia-Practica3/css/style.css
+++ b/Multimedia-Practica3/css/style.css
@@ -88,6 +88,10 @@ label {
     font-weight: 400
 }
 
+.focus-button:focus {
+    color: red;
+}
+
 *::-moz-selection {
     background: #444;
     color: #fff;
@@ -150,18 +154,6 @@ h3 {
     background: #f5f5f5
 }
 
-.bg-img-1 {
-    background-image: url(../img/slider/slider-img-1.jpg)
-}
-
-.bg-img-2 {
-    background-image: url(../img/background-img/bg-img-2.jpg)
-}
-
-.cta-bg-1 {
-    background-image: url(../img/background-img/bg-img-3.jpg)
-}
-
 .overlay {
     position: relative;
     z-index: 0
@@ -205,75 +197,6 @@ h3 {
     padding-top: 120px
 }
 
-.owl-carousel .owl-nav div {
-    background: transparent;
-    height: 54px;
-    left: 0px;
-    line-height: 54px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    -webkit-transition: all 0.3s ease 0s;
-    -o-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    width: 54px;
-    font-size: 25px;
-    color: #fff;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 50%
-}
-
-.owl-carousel .owl-nav div.owl-next {
-    left: auto;
-    right: 0
-}
-
-.owl-carousel .owl-nav div.owl-next i {
-    position: relative;
-    right: -2px;
-    top: -3px
-}
-
-.owl-carousel .owl-nav div.owl-prev i {
-    position: relative;
-    right: 1px;
-    top: -2px
-}
-
-.owl-carousel:hover .owl-nav div {
-    opacity: 1;
-    visibility: visible
-}
-
-.owl-carousel:hover .owl-nav div:hover {
-    color: #fff
-}
-
-.seperator {
-    display: inline-block;
-    width: 90px;
-    height: 2px;
-    background: #131313;
-    margin-top: 30px;
-    margin-bottom: 36px
-}
-
-@media (max-width: 767px) {
-    .seperator {
-        margin-top: 15px;
-        margin-bottom: 20px
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    .seperator {
-        margin-top: 15px;
-        margin-bottom: 10px
-    }
-}
 
 .mb-95 {
     margin-bottom: 95px
