--- a/Multimedia-Practica3/css/style.css
+++ b/Multimedia-Practica3/css/style.css
@@ -56,6 +56,18 @@ h1, h2, h3, h4, h5 {
     color: #131313
 }
 
+.title {
+    display: block;
+    font-size: 4em;
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    color: #131313
+}
+
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: inherit
 }
@@ -4495,4 +4507,8 @@ h1, h2, h3, h4, h5, h6 {
 .blog_part .single-home-blog .card ul li span {
     margin-right: 10px;
     font-size: 12px
+}
+
+.longdesc {
+    display: none;
 }
