--- a/Multimedia-Practica3/css/style.css
+++ b/Multimedia-Practica3/css/style.css
@@ -378,6 +378,14 @@ h3 {
     }
 }
 
+.mobile-aa-icon {
+    margin-left: 39%
+}
+
+.gotham-video {
+    margin-top:5%
+}
+
 .slicknav_menu .slicknav_nav {
     background: #fff;
     float: right;
@@ -515,8 +523,8 @@ h3 {
 }
 
 .logo-img {
-    height: 4rem;
-    width: 7rem
+    height: 7rem;
+    width: 10rem
 }
 
 .header-area .main-header-area .main-menu {
