--- a/Multimedia-Practica3/css/style.css
+++ b/Multimedia-Practica3/css/style.css
@@ -85,7 +85,7 @@ p {
     font-size: 14px;
     font-weight: 300;
     line-height: 26px;
-    color: #808080;
+    color: #393939;
     margin-bottom: 13px;
     font-family: 'Playfair Display', serif
 }
@@ -291,7 +291,7 @@ h3 {
 }
 
 .section_title .sub_heading {
-    color: #c9c9c9;
+    color: #393939;
     display: block;
     font-size: 14px;
     text-transform: uppercase;
@@ -682,7 +682,7 @@ h3 {
 }
 
 .slider_bg_1 {
-    background-image: url(../img/banner/gotham-city.jpg)
+    background-image: url(../img/banner/gotham-city.jpg);
 }
 
 .slider_area .single_slider {
@@ -838,7 +838,7 @@ h3 {
     font-weight: 400;
     font-size: 14px;
     text-transform: uppercase;
-    color: #808080
+    color: #393939
 }
 
 @media (max-width: 767px) {
@@ -856,7 +856,7 @@ h3 {
     font-weight: 400;
     font-size: 16px;
     line-height: 28px;
-    color: #808080;
+    color: #393939;
     position: relative;
     padding-left: 35px;
     margin-bottom: 6px
@@ -885,7 +885,7 @@ h3 {
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
-    color: #808080
+    color: #393939
 }
 
 .about_area .about_info a {
@@ -957,180 +957,7 @@ h3 {
     margin-bottom: 0;
     line-height: 28px;
     font-weight: 400;
-    color: #808080
-}
-
-.youtube_bg {
-    background-image: url(../img/video/youtube_bg.png)
-}
-
-.youtube_video_area .youtube_video {
-    height: 580px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center
-}
-
-@media (max-width: 767px) {
-    .youtube_video_area .youtube_video {
-        height: 400px
-    }
-}
-
-.youtube_video_area .youtube_video .youtube_play_btn a {
-    background: #d7143a;
-    color: #fff;
-    height: 63px;
-    display: inline-block;
-    line-height: 63px;
-    width: 90px;
-    text-align: center;
-    font-size: 28px;
-    border-radius: 15px
-}
-
-.youtube_video_area .youtube_video .youtube_play_btn a i {
-    position: relative;
-    top: -2px
-}
-
-.lastest_project {
-    padding-top: 100px;
-    padding-bottom: 120px
-}
-
-@media (max-width: 767px) {
-    .lastest_project {
-        padding-top: 30px;
-        padding-bottom: 30px
-    }
-}
-
-.lastest_project .section_title p {
-    font-size: 16px;
-    line-height: 28px;
-    color: #808080;
-    margin-bottom: 45px
-}
-
-.lastest_project .section_title h4 {
-    color: #131313;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 30px;
-    margin-bottom: 23px
-}
-
-@media (max-width: 767px) {
-    .lastest_project .section_title h4 {
-        margin-bottom: 7px;
-        font-size: 20px
-    }
-}
-
-@media (max-width: 767px) {
-    .lastest_project .single_project_thumb {
-        margin: 30px 0
-    }
-}
-
-.lastest_project .single_project_thumb img {
-    width: 100%
-}
-
-.testimonial_bg {
-    background-image: url(../img/banner/testmonial-bg.png)
-}
-
-.testmonial_area {
-    padding: 150px 150px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat
-}
-
-@media (max-width: 767px) {
-    .testmonial_area {
-        padding: 100px 0
-    }
-}
-
-.testmonial_area .testmonial_info .author img {
-    width: auto;
-    margin: auto
-}
-
-.testmonial_area .testmonial_info p {
-    font-size: 22px;
-    font-weight: 400;
-    color: #fff;
-    line-height: 36px;
-    margin-top: 57px;
-    margin-bottom: 52px
-}
-
-@media (max-width: 767px) {
-    .testmonial_area .testmonial_info p {
-        font-size: 15px;
-        margin-bottom: 30px;
-        margin-top: 20px;
-        line-height: 26px
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    .testmonial_area .testmonial_info p {
-        font-size: 15px;
-        margin-bottom: 30px;
-        margin-top: 20px;
-        line-height: 26px
-    }
-}
-
-@media (min-width: 992px) and (max-width: 1200px) {
-    .testmonial_area .testmonial_info p {
-        font-size: 15px
-    }
-}
-
-@media (max-width: 767px) {
-    .testmonial_area .testmonial_info p br {
-        display: none
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    .testmonial_area .testmonial_info p br {
-        display: none
-    }
-}
-
-@media (min-width: 992px) and (max-width: 1200px) {
-    .testmonial_area .testmonial_info p br {
-        display: none
-    }
-}
-
-.testmonial_area .testmonial_info .author_name h4 {
-    color: #ffffff;
-    font-size: 16px
-}
-
-.testmonial_area .testmonial_info .author_name span {
-    color: #fff;
-    font-size: 14px;
-    font-family: "Playfair Display", serif
+    color: #393939
 }
 
 .messege_area {
@@ -1519,7 +1346,7 @@ h3 {
 }
 
 .team_area .single_team p {
-    color: #808080;
+    color: #393939;
     font-weight: 400;
     font-size: 16px
 }
